--- a/bims/templates/landing_page.html
+++ b/bims/templates/landing_page.html
@@ -31,7 +31,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-8 mx-auto text-center">
-                            <h2 class="section-heading">BIODIVERSITY
+                            <h2 class="section-heading">BIODIVERSITY OCCURRENCE
                                 RECORDS</h2>
                         </div>
                     </div>
