--- a/bims/templates/landing_page.html
+++ b/bims/templates/landing_page.html
@@ -64,7 +64,7 @@
                 {% endfor %}
             {% endif %}
             {% if custom_theme.partners.all %}
-            <section class="biodiversity-data-container grid-logos" style="position: relative; background-color: #f5f5f5a6">
+            <section class="biodiversity-data-container grid-logos" style="position: relative;">
                 <div class="container" style="margin-bottom: 25px">
                     <div class="row">
                         <div class="col-lg-8 mx-auto text-center">
