Add new taxon not in gbif in taxon management

--- a/bims/templates/taxa_management.html
+++ b/bims/templates/taxa_management.html
@@ -276,7 +276,7 @@
                     </div>
                     <div class="container new-taxon-form" style="margin-top: 15px; display: none">
                         <div class="alert alert-info" role="alert">
-                            Whilst FBIS will accept taxa that are not listed in GBIF,
+                            Whilst the system will accept taxa that are not listed in GBIF,
                             you should use the capability only for taxa where the classification is partly unresolved.
                             <br><br>
                             Click ADD to add this taxon even though it is not listed in GBIF,
