Fix abundance_type for algae

--- a/bims/templates/site_visit/site_visit_detail.html
+++ b/bims/templates/site_visit/site_visit_detail.html
@@ -350,6 +350,7 @@
                                         Abundance
                                     </option>
                                     <option value="density_cells_per_m2" {% if abundance_type == 'density_cells_per_m2' %} selected {% endif %}> Density (cells/m2)
+                                    <option value="density_cells_per_m2" {% if abundance_type == 'density' %} selected {% endif %}> Density (cells/m2)
                                     <option value="density_cells_per_mL" {% if abundance_type == 'density_cells_per_mL' %} selected {% endif %}> Density (cells/mL)
                                     </option>
                                 </select>
