Update download workflow for taxon download

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -227,9 +227,8 @@
     </div>
     <div class="row">
         <div class="col-4 title_column">Sites</div>
-        <div class="col-8"><a href='<%= csv_downloads_url %>'
-                              style="text-decoration: underline; font-size: 11pt !important;">
-            Download as CSV</a>
+        <div class="col-8">
+            <button class="btn btn-primary btn-sm download-as-csv" style="font-size: 8pt">Download as CSV</button>
         </div>
     </div>
 </script>
