Grey out permalink if no filters applied

--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -648,10 +648,10 @@
              data-content="Print Map">
             <i class="fa fa-print" aria-hidden="true"></i>
         </div>
-        <div id="permalink-control" class="permalink-control sub-control-panel"
+        <div id="permalink-control" class="permalink-control sub-control-panel sub-control-panel-disabled"
         data-toggle="popover"
              data-placement="right" data-trigger="hover"
-             data-content="Copy sharable link for this map">
+             data-content="No filters applied">
             <i class="fa fa-link" aria-hidden="true"></i>
         </div>
     </div>
