--- a/bims/templates/contactus/contact_success.html
+++ b/bims/templates/contactus/contact_success.html
@@ -41,12 +41,8 @@
                     <h1>{% trans "Thank You" %}</h1>
                     <p>We appreciate your feedback
                     Someone from the team will be in touch with you shortly.</p>
+                    <div style="width: 100%; text-align: center"><a href="/">Back to home page</a></div>
                 </div>
-                 <div class="col-lg-12 center-block"
-                                style="padding-left:45%;">
-                            <div class="btn btn-success"><a href="/">Home
-                                Page</a></div>
-                        </div>
             </div> <!-- /container -->
             </div>
         {% endblock %}
