Fix owner filter, add command to sync owner

--- a/bims/templates/map_page/search-panel-templates.html
+++ b/bims/templates/map_page/search-panel-templates.html
@@ -256,7 +256,7 @@
          {% if COLLECTOR_FILTER %}
             <div class="row sub-filter">
                 <div class="col-lg-12 subtitle">
-                    COLLECTOR/OWNER <i
+                    OWNER <i
                         class="fa fa-angle-up pull-right filter-icon-arrow"></i><i
                         class="fa fa-angle-down pull-right filter-icon-arrow"></i>
                 </div>
