--- a/bims/templates/site_visit/site_visit_list.html
+++ b/bims/templates/site_visit/site_visit_list.html
@@ -73,7 +73,7 @@
                 <h5 style="margin-top: 20px;">Filters</h5>
                 <div style="border-top: 1px solid rgba(0,0,0,0.28)"
                      class="filter-list">
-                    <div class="filter-title">Collector/Owner</div>
+                    <div class="filter-title">Owner</div>
                     <div class="filter-value">
                         <input type="text" class="form-control form-control-sm"
                                onClick="this.setSelectionRange(0, this.value.length)"
@@ -96,7 +96,7 @@
                         <th scope="col" style="width:200px">Site description</th>
                         <th scope="col">Sampling date</th>
                         <th scope="col">Source collection</th>
-                        <th scope="col">Collector/Owner</th>
+                        <th scope="col">Owner</th>
                         <th scope="col">Total occurrences</th>
                         <th scope="col">Actions</th>
                     </tr>
