--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -60,7 +60,7 @@
                     <span style="display: inline-block; vertical-align: middle; line-height: normal"><%= value.number_of_taxa %></span>
                 </div>
                 <div class="col-2 no-padding" style="padding-right: 10px">
-                    <button class="fbis-button-small fbis-red sp-add-record" data-module-id="<%= value.module %>" data-module-name="<%= key %>" style="width: 100%"> + Add </button>
+                    <button class="fbis-button-small <% if (key.toLowerCase().includes('odonata')) { %> disabled <% } %> fbis-red sp-add-record" data-module-id="<%= value.module %>" data-module-name="<%= key %>" style="width: 100%"> + Add </button>
                     <button class="fbis-button-small <% if (value.number_of_taxa == 0) { %> disabled <% } %> sp-open-dashboard" data-module="<%= value.module %>" style="width: 100%">
                         Dashboard
                     </button>
