--- a/bims/templates/taxa_management.html
+++ b/bims/templates/taxa_management.html
@@ -145,7 +145,9 @@
                     <li data-id="{{ taxa_group.id }}" class="ui-state-default">
                         <div class="row">
                             <div class="col-sm-3 img-container">
+                                {% if taxa_group.logo %}
                                 <img src="{{ taxa_group.logo.url }}"/>
+                                {% endif %}
                             </div>
                             <div class="col-sm-9">
                                 <div class="taxon-group-title">
