--- a/bims/templates/map_page/side-panel-templates.html
+++ b/bims/templates/map_page/side-panel-templates.html
@@ -42,10 +42,10 @@
         <% _.each(data, function (value, key) { %>
             <div class="row" style="height: 70px; padding-top: 10px; padding-bottom: 10px; border-bottom: 1px solid #dee2e6; font-size: 12pt" >
                 <div class="col-2" style="text-align: center">
-                    <div class="module-icon"><img height="50" src="/uploaded/<%= value.icon %>"></div>
+                    <div class="module-icon" title="<%= key %>"><img height="50" src="/uploaded/<%= value.icon %>"></div>
                 </div>
                 <div class="col-1" style="height: 50px; line-height: 50px; text-align: center">
-                    <span style="display: inline-block; vertical-align: middle; line-height: normal"><%= value.occurrences %></span>
+                    <span style="font-size: 10pt; display: inline-block; vertical-align: middle; line-height: normal"><%= value.occurrences %></span>
                 </div>
                 <div class="col-2 no-padding">
                     <canvas class="overview-chart" id="origin-chart-<%= value.module %>"></canvas>
@@ -57,10 +57,11 @@
                     <canvas class="overview-chart" id="cons-chart-<%= value.module %>"></canvas>
                 </div>
                 <div class="col-1" style="height: 50px; line-height: 50px; text-align: center">
-                    <span style="display: inline-block; vertical-align: middle; line-height: normal"><%= value.number_of_taxa %></span>
+                    <span style="display: inline-block; vertical-align: middle; line-height: normal; font-size: 10pt"><%= value.number_of_taxa %></span>
                 </div>
-                <div class="col-2 no-padding" style="padding-right: 10px">
-                    <button class="fbis-button-small fbis-red sp-add-record" data-module-id="<%= value.module %>" data-module-name="<%= key %>" style="width: 100%"> + Add </button>
+                <div class="col-2 no-padding" style="padding-right: 10px; display: flex; align-items: center; flex-direction: column; justify-content: center">
+                    <button class="fbis-button-small <% if (key.toLowerCase().includes('odonata')) { %> disabled <% } %> fbis-red sp-add-record" data-module-id="<%= value.module %>" data-module-name="<%= key %>" style="width: 100%;
+                    <% if (!add_data) { %> display:none <% } %>"> + Add </button>
                     <button class="fbis-button-small <% if (value.number_of_taxa == 0) { %> disabled <% } %> sp-open-dashboard" data-module="<%= value.module %>" style="width: 100%">
                         Dashboard
                     </button>
@@ -68,11 +69,11 @@
             </div>
         <% }); %>
         <% if (is_sass_enabled) { %>
-            <div class="row" style="padding: 10px">
-                <div class="col-sm-6" style="padding-right: 0">
+            <div class="row" style="padding: 10px;">
+                <div class="col-sm-<% if (!add_data) { %>12<%  } else { %>6<% } %>" style="padding-right: 0">
                     <button class="fbis-button-small <% if (sass_exist) { %> sp-sass-dashboard <% } else { %> disabled <% } %>" style="width: 100%; height: 30px">SASS Dashboard</button>
                 </div>
-                <div class="col-sm-6" style="padding-left: 0">
+                <div class="col-sm-6" style="padding-left: 0;<% if (!add_data) { %> display:none <% } %>">
                     <button class="fbis-button-small fbis-red sp-add-sass" style="width: 100%; height: 30px">Add SASS</button>
                 </div>
             </div>
